# firmware-matrix-math

./: CMakeLists.txt  LICENSE  README.md  firmware-math-lib.cpp
matrix/: AxisAngle.hpp  Euler.hpp  LeastSquaresSolver.hpp  Matrix.hpp  Quaternion.hpp  Slice.hpp  SquareMatrix.hpp  Vector.hpp  Vector3.hpp  common.h  concepts.hpp  helper_functions.hpp
test/: MatrixAssignmentTest.cpp
